--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,16 @@ version: '2'
 services:
   web:
     build: .
+    expose:
+      - 80
+      - 443
     ports:
-      - 8080:80
+      - 80:80
       - 443:443
     volumes:
-        - ./:/var/www/html
-
+      - .:/var/www/html
+    depends_on:
+      - mysql
   mysql:
     image: mysql:5.7
     environment:
